tests/fixtures/syntax_rules/neg/r012-reasonable-exports.ts
/** Reasonable number of exports — does NOT trigger AGENT-TS-R012. */
export const a = 1;
export const b = 2;
export const c = 3;
export const d = 4;
export const e = 5;
